kube/customer/destination-rule-customer-v1-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: customer
spec:
  host: customer
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - labels:
      version: v1
    name: version-v1
  - labels:
      version: v2
    name: version-v2
