kube/customer/virtual-service-customer-v1_and_v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
  - "*"
  gateways:
  - customer-gateway
  http:
#   - match:
#     - headers:
#         user_agent:
#           exact: Safari
#     - uri:
#         prefix: /customer
#     rewrite:
#       uri: /
#     route:
#     - destination:
#         host: customer
#         subset: version-v3
# # hack to stop retries
#     retries:
#       attempts: 1
#       perTryTimeout: 5s
#       retryOn: "506"
  - match:
    - uri:
        prefix: /customer
    rewrite:
      uri: /
    route:
    - destination:
        host: customer
        subset: version-v1
      weight: 50
    - destination:
        host: customer
        subset: version-v2
      weight: 50
    retries:
      attempts: 1
      perTryTimeout: 5s
      retryOn: "506"
